src2/objects/Blocked_Log__c.object
<CustomObject>
    <fields>
        <fullName>AssetStatus__c</fullName>
        <label>Asset Status</label>
        <referenceTo>NES_AssetStatus__c</referenceTo>
        <relationshipLabel>Blocked Logs</relationshipLabel>
        <relationshipName>Blocked_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BlockedDate__c</fullName>
        <formula>DATEVALUE(StartTimestamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BlockedDuration__c</fullName>
        <formula>(EndTimestamp__c - StartTimestamp__c) * 60 * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocked_Summary__c</fullName>
        <label>Blocked Summary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndTimestamp__c</fullName>
        <label>End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OperationalStatus__c</fullName>
        <label>Operational Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Halted</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartTimestamp__c</fullName>
        <label>Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Blocked Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AssetStatus__c</columns>
        <columns>StartTimestamp__c</columns>
        <columns>EndTimestamp__c</columns>
        <columns>OperationalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLOCK-{0000}</displayFormat>
        <label>Blocked Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocked Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>